--- a/app/templates/help/api.twig
+++ b/app/templates/help/api.twig
@@ -5,6 +5,75 @@
 {% block content %}
     <h2>API Documentation</h2>
 
-    <p>Nothing to see here.</p>
+    <h3>Conventions</h3>
+
+    <p>Formats, conventions, pagination, etc.</p>
+
+    <h4>Navigation</h4>
+
+    <p>Links and stuff.</p>
+
+    <h3>Public Endpoints</h3>
+
+    <p>Public endpoints offer you insight into the build and push process without being able to add, remove, or change anything.</p>
+
+    <h4>Logs</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.logs') }}">{{ uriFor('api.logs') }}</a></li>
+    </ul>
+
+    <h4>Environments</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.environments') }}">{{ uriFor('api.environments') }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.environment', {id: 'id'}) }}">{{ uriFor('api.environment', {id: ':id'}) }}</a> [NYI]</li>
+    </ul>
+
+    <h4>Groups</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.groups') }}">{{ uriFor('api.groups') }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.group', {id: ':id'}) }}">{{ uriFor('api.group', {id: ':id'}) }}</a> [NYI]</li>
+    </ul>
+
+    <h4>Users</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.users') }}">{{ uriFor('api.users') }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.user', {id: ':id'}) }}">{{ uriFor('api.user', {id: ':id'}) }}</a> [NYI]</li>
+    </ul>
+
+    <h4>Repositories</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.repositories') }}">{{ uriFor('api.repositories') }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.repository', {id: ':id'}) }}">{{ uriFor('api.repository', {id: ':id'}) }}</a> [NYI]</li>
+    </ul>
+
+    <h4>Deployments</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.deployments', {id: ':id'}) }}">{{ uriFor('api.deployments', {id: ':id'}) }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.deployment', {id: ':id'}) }}">{{ uriFor('api.deployment', {id: ':id'}) }}</a> [NYI]</li>
+    </ul>
+
+    <h4>Builds</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.builds', {id: ':id'}) }}">{{ uriFor('api.builds', {id: ':id'}) }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.build', {id: ':id'}) }}">{{ uriFor('api.build', {id: ':id'}) }}</a> [NYI]</li>
+    </ul>
+
+    <h4>Pushes</h4>
+
+    <ul>
+        <li><a href="{{ urlFor('api.pushes', {id: ':id'}) }}">{{ uriFor('api.pushes', {id: ':id'}) }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.push', {id: 'id'}) }}">{{ uriFor('api.push', {id: 'id'}) }}</a> [NYI]</li>
+    </ul>
+
+    <h3>Protected Endpoints</h3>
+
+    <p>Protected endpoints require client authentication, but allow you to interact with the build and push system.</p>
 
 {% endblock %}
