Log endpoint modifications.

--- a/app/templates/help/help.twig
+++ b/app/templates/help/help.twig
@@ -11,6 +11,7 @@
         <li><a href="#add-application">I would like to deploy my application with HAL 9000. What do I need to do?</a></li>
         <li><a href="#training">Are there any training sessions available?</a></li>
         <li><a href="#application-deployment">How do I use a script to build or push my application?</a></li>
+        <li><a href="#api">So, I heard there's an API. Is there any documentation?</a></li>
     </ul>
 
     <a name="support"></a>
@@ -117,6 +118,12 @@
     <p>
         System commands can be used to customize the build and/or push process for an application. Read more about the
         <a href="{{ urlFor('help.deployment') }}">build and push scripting environment</a>.
+    </p>
+
+    <a name="api"></a>
+    <h3>So, I heard there's an API. Is there any documentation?</h3>
+    <p>
+        Yes, a read-only API is currently available. Documentation can be found <a href="{{ urlFor('help.api') }}">here</a>.
     </p>
 
 
