Change 'webcore@quickenloans.com' to 'itteamwebcore@quickenloans.com'. fixes #125

--- a/app/templates/help.twig
+++ b/app/templates/help.twig
@@ -23,7 +23,7 @@
     <p>
         HAL 9000 is developed and maintained by the Web Core team. To report bugs or request a new features, please
         submit an issue in the Github repository at <a href="http://git/web-core/hal/issues">http://git/web-core/hal</a>.
-        For general questions, you can also email <a href="mailto:WebCore@quickenloans.com">Web Core</a>.
+        For general questions, you can also email <a href="mailto:ItTeamWebCore@quickenloans.com">Web Core</a>.
     </p>
 
     <a name="add-application"></a>
@@ -102,13 +102,13 @@
     <p>
         Once your have gathered all of the required information, speak with your team leader and request that the
         application be added to HAL 9000. If your team leader does not have permission to do this, then contact the
-        <a href="mailto:WebCore@quickenloans.com">Web Core</a> team and we'll assist you with the process.
+        <a href="mailto:ItTeamWebCore@quickenloans.com">Web Core</a> team and we'll assist you with the process.
     </p>
 
     <a name="training"></a>
     <h3>Are there any training sessions available?</h3>
     <p>
-        If you would like to train your team on how to use HAL 9000, then contact the <a href="mailto:WebCore@quickenloans.com">Web Core</a>
+        If you would like to train your team on how to use HAL 9000, then contact the <a href="mailto:ItTeamWebCore@quickenloans.com">Web Core</a>
         team and we'll set up a time to show you how.
     </p>
 
