Rename hello page to dashboard. Fix associated links.

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -44,7 +44,7 @@
                     <ul class="nav--main mbn">
                         {% if account %}
                             <li>
-                                <a href="{{ urlFor('hello') }}" title="Home">
+                                <a href="{{ urlFor('dashboard') }}" title="Home">
                                 <span class="icon" style="fill:white"><svg viewBox="0 0 32 32">
                                         <use xlink:href="#home"></use>
                                     </svg></span>
