--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -1,121 +1,40 @@
-<h3>Your Repositories</h3>
-<p>I've taken the effort to assemble a list of repositories you may be interested in. You're welcome.</p>
-<ul class="list--bare cards">
-    {% for repo in repos %}
-        <li>
-            <article class="card">
-                <header class="card__header">
-                    <h4 class="mbn"><a href="{{ urlFor('repository.status', {'id': repo.id}) }}">{{ repo.key }}</a></h4>
-                    <p class="mbn">
-                        <a href="{{ urlFor('group', {'id': repo.group.id}) }}">{{ repo.group.name }}</a>
-                    </p>
-                </header>
+{% extends 'base.html.twig' %}
 
-                <section class="card__details">
-                    <ul class="split">
-                        <li>
-                            <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
-                        <span class="icon">
-                            <svg viewBox="0 0 32 32">
-                                <use xlink:href="#github"></use>
-                            </svg>
-                        </span>
-                        </li>
-                    </ul>
-                    <a class="btn--full btn--action" href="{{ urlFor('build.start', {'id': repo.id}) }}">
-                        Start New Build
-                    </a>
-                </section>
-            </article>
-        </li>
-    {% endfor %}
-</ul>
+{% set page_title = 'Hello, '~getUsersActualName(user)~'.' %}
 
-<div class="details-box">
-    <h3>Recent Activity</h3>
+{% block content %}
 
-    <h4>All Pending</h4>
-    <table class="tablesaw tablesaw-stack" data-mode="stack">
-        <thead>
-        <th>Repository</th>
-        <th>Action</th>
-        <th>Status</th>
-        <th>Source</th>
-        <th>Destination</th>
-        <th>Initiator</th>
-        </thead>
-        <tbody>
-        {% for item in pending %}
-            <tr>
-                <td>
-                    {% if item is build %}
-                        <a href="{{ urlFor('repository.status', {'id': item.repository.id}) }}">{{ item.repository.key }}</a>
-                    {% endif %}
-                    {% if item is push %}
-                        <a href="{{ urlFor('repository.status', {'id': item.build.repository.id}) }}">{{ item.build.repository.key }}</a>
-                    {% endif %}
-                </td>
-                <td>
-                    {% if item is build %}
-                        <a href="{{ urlFor('build', {'build': item.id}) }}">Build</a>
-                    {% endif %}
-                    {% if item is push %}
-                        <a href="{{ urlFor('push', {'push': item.id}) }}">Push</a>
-                    {% endif %}
-                </td>
-                <td>
-                    {% if item.status == 'Success' %}
-                        <span class="status-before--success">{{ item.status }}</span>
-                    {% elseif item.status in ['Error', 'Removed'] %}
-                        <span class="status-before--error">{{ item.status }}</span>
-                    {% else %}
-                        <span class="status-before--other">{{ item.status }}</span>
-                    {% endif %}
-                </td>
-                <td>
-                    {% if item is build %}
-                        Commit <a href="{{ githubCommit(item.repository.githubUser, item.repository.githubRepo, item.commit) }}">{{ item.commit|commit }}</a>
-                        <span class="icon">
-                                    <svg viewBox="0 0 32 32">
-                                        <use xlink:href="#github"></use>
-                                    </svg>
-                                </span>
-                    {% endif %}
-                    {% if item is push %}
-                        Build <a href="{{ urlFor('build', {'build': item.build.id}) }}">{{ item.build.id[:10] }}</a>
-                    {% endif %}
-                </td>
-                <td>
-                    {% if item is build %}
-                        Build <a href="{{ urlFor('build', {'build': item.id}) }}">{{ item.id[:10] }}</a>
-                    {% endif %}
-                    {% if item is push %}
-                        <a href="{{ urlFor('server', {'id': item.deployment.server.id }) }}">{{ item.deployment.server.name }}</a> ({{ item.deployment.server.environment.key }})
-                    {% endif %}
-                </td>
-                <td>
-                    {% if item.user %}
-                        <a href="{{ urlFor('user', {'id': item.user.id}) }}">{{ item.user.name[:20] }}</a>
-                    {% elseif item.consumer %}
-                        {{ item.consumer.name[:20] }}
-                    {% else %}
-                        Unknown
-                    {% endif %}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">
-                    There are no pending tasks.
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <h2>Hello, {{ getUsersActualName(user) }}.</h2>
 
-    <h4>Your Recent Builds</h4>
-    {% include 'partials/build-table.twig' with {'builds': builds, 'initiator': false} %}
+    <p>
+        You have reached the latest version of the code building and pushing tool for unix-based applications.
+    <p>
+    <p>
+        The 9000 series is the most reliable computer ever made. No 9000 computer has ever made a mistake or distorted information. We are all, by any practical definition of the words, foolproof and incapable of error.
+    </p>
 
-    <h4>Your Recent Pushes</h4>
-    {% include 'partials/push-table.twig' with {'builds': builds, 'initiator': false} %}
-</div>
+    <p>If you feel you do not have the correct permissions or need support to remedy a mistake you have made, please contact our support personnel on standby: <a href="{{ urlFor('help') }}">Contact support</a>.</p>
+
+    <p>I look forward to working with you.</p>
+
+
+
+    <h3>Instructions</h3>
+    <p>
+        Applications are assigned to <strong>groups</strong> or <strong>organizations</strong>. To push code for an application, follow these steps:
+        <ol>
+            <li>Find the repository under the group by starting on the <a href="{{ urlFor('groups') }}">Groups</a>.</li>
+            <li>Go to the repository status page.</li>
+            <li>Create a build for a specific environment.</li>
+            <li>Push the build to your desired servers.</li>
+        </ol>
+
+        <small><strong>Note</strong>: Push permissions are strictly regulated. If you feel your permissions are incorrect due to a mistake made by another human, open an inquiry by <a href="{{ urlFor('help') }}">contacting support</a>.</small>
+    </p>
+{% endblock %}
+
+{# ideas for this page:
+    - list of the most recent pushes
+    - "hot" or "active" repositories -> shortcuts right to their deployment page
+    - Most recent builds/pushes triggered by this user and their status (and if they are still the latest deployment for that repo)
+#}
