Make the queue refresh endpoint conform

--- a/app/templates/queue.twig
+++ b/app/templates/queue.twig
@@ -10,7 +10,7 @@
         <tr>
             <th>Type</th>
             <th>Status</th>
-            <th>Environment/Server</th>
+            <th>Environment → Server</th>
             <th>Repository</th>
             <th>Start Time</th>
         </tr>
